# TheAgenticOS

./: .gitignore  README.md  book.toml
.github/workflows/: deploy.yml
implementations/: README.md
implementations/agent-governance-runtime/: .gitignore  LICENSE  README.md  pyproject.toml
implementations/agent-governance-runtime/deploy/: Dockerfile
implementations/agent-governance-runtime/examples/: demo-agent.profile.json  demo-agent.registration.json  demo.policies.json  instrument_agent.py  proxy-config.json
implementations/agent-governance-runtime/integrations/claude-code/: README.md
implementations/agent-governance-runtime/integrations/claude-code/.github/instructions/: governance.instructions.md
implementations/agent-governance-runtime/integrations/claude-code/.github/skills/governance/: SKILL.md
implementations/agent-governance-runtime/integrations/github-copilot/: README.md
implementations/agent-governance-runtime/integrations/github-copilot/examples/: fleet_monitor.py  governed_copilot_agent.py  governed_mcp_gateway.py  governed_skill_runner.py
implementations/agent-governance-runtime/integrations/github-copilot/policies/: copilot-fleet.policies.json  production-guardrails.policies.json
implementations/agent-governance-runtime/integrations/github-copilot/profiles/: code-reviewer.profile.json  devops-agent.profile.json  fullstack-dev.profile.json
implementations/agent-governance-runtime/integrations/n8n/: README.md
implementations/agent-governance-runtime/schemas/: README.md  access-profile.schema.json  agent-registration.schema.json  policies.schema.json
implementations/agent-governance-runtime/src/cli/: README.md  pyproject.toml
implementations/agent-governance-runtime/src/cli/agr_cli/: __init__.py  main.py
implementations/agent-governance-runtime/src/mcp-server/: pyproject.toml
implementations/agent-governance-runtime/src/mcp-server/agr_mcp/: __init__.py  proxy.py  server.py
implementations/agent-governance-runtime/src/sdk/: README.md  pyproject.toml
implementations/agent-governance-runtime/src/sdk/agr_sdk/: __init__.py  client.py
implementations/agent-governance-runtime/src/server/: pyproject.toml
implementations/agent-governance-runtime/src/server/agr_server/: __init__.py  config.py  main.py
implementations/agent-governance-runtime/src/server/agr_server/api/: approvals.py  audit.py  auth.py  budget.py  compliance.py  dashboard.py  governance.py  operators.py  policy.py  registry.py
implementations/agent-governance-runtime/src/server/agr_server/middleware/: __init__.py  gating.py
implementations/agent-governance-runtime/src/server/agr_server/models/: __init__.py  agent.py  approval.py  audit.py  budget.py  dashboard.py  operator.py  policy.py
implementations/agent-governance-runtime/src/server/agr_server/store/: __init__.py  base.py  sqlite.py
implementations/agent-governance-runtime/src/server/tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_budget.py  test_dashboard_compliance.py  test_governance.py  test_operators_approvals.py  test_policy.py  test_registry.py
implementations/coding-os/: TUTORIAL.md
implementations/coding-os/sample-project/: pyproject.toml
implementations/coding-os/sample-project/src/: api.py  todo.py
implementations/coding-os/sample-project/src/todo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
implementations/coding-os/sample-project/tests/: test_todo.py
implementations/knowledge-os/: TUTORIAL.md
src/: SUMMARY.md  cover.md  introduction.md
theme/: custom.css  mermaid-init.js  zoom.js
(+93 files in other folders)
