[project]
name = "todo-api"
version = "0.1.0"
description = "A simple To-Do API — sample project for the Coding OS tutorial"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
    "ruff>=0.1",
]
