[project]
name = "agr-cli"
version = "0.1.0"
description = "Agent Governance Runtime — CLI"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Marcel Aldecoa" }]
dependencies = [
    "agr-sdk>=0.1.0",
    "typer>=0.12,<1",
    "rich>=13,<14",
]

[project.scripts]
agr = "agr_cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agr_cli*"]
