[project]
name = "agr-mcp"
version = "0.1.0"
description = "Agent Governance Runtime — MCP Server"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Marcel Aldecoa" }]
dependencies = [
    "mcp>=1.0,<2",
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
]

[project.scripts]
agr-mcp = "agr_mcp.server:main"
agr-mcp-proxy = "agr_mcp.proxy:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agr_mcp*"]
